--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
 
       <h1>Let's Play</h1>
-      <a class="refresh" href="dicee.html"><button class="btn" type="button" >Refresh Me</button></a>
+      <a class="refresh" href="index.html"><button class="btn" type="button" >Refresh Me</button></a>
 
       <div class="dice">
         <p>Player 1</p>
